# bank-account-statement-visualiser

./: .gitignore  README.md  clean.sh  main.py  pyproject.toml  requirements.txt
banks/: account.py  hdfc.py  sbi.py
