[tool.poetry]
name = "bank-account-statement-visualiser"
version = "0.1.0"
description = ""
authors = ["gurbaaz <gurbaazsn123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
